--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ h1 small {
   border: 6px solid #F8F8F8;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
 }
-.avatar-upload .avatar-preview > div {
+.avatar-upload .avatar-preview > img {
   width: 100%;
   height: 100%;
   border-radius: 100%;
@@ -131,7 +131,8 @@ h1 small {
             <label for="imageUpload"></label>
         </div>
         <div class="avatar-preview">
-            <div id="imagePreview" style="background-image: url(http://i.pravatar.cc/500?img=7);">
+            <img id="imagePreview" src="http://i.pravatar.cc/500?img=7" >
+            
             </div>
         </div>
     </div>
@@ -144,7 +145,7 @@ function readURL(input) {
   if (input.files && input.files[0]) {
     var reader = new FileReader();
     reader.onload = function (e) {
-      $('#imagePreview').css('background-image', 'url(' + e.target.result + ')');
+      $('#imagePreview').attr('src', e.target.result);
       $('#imagePreview').hide();
       $('#imagePreview').fadeIn(650);
     };
@@ -156,6 +157,54 @@ $("#imageUpload").change(function () {
 });
 //# sourceURL=pen.js
     </script>
+
+<div>Teachable Machine Image Model</div>
+<button type="button" onclick="init()">예측하기</button>
+<div id="webcam-container"></div>
+<div id="label-container"></div>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+<script type="text/javascript">
+    // More API functions here:
+    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
+
+    // the link to your model provided by Teachable Machine export panel
+    const URL = "https://teachablemachine.withgoogle.com/models/WsNLUzfwj/";
+
+    let model, webcam, labelContainer, maxPredictions;
+
+    // Load the image model and setup the webcam
+    async function init() {
+        const modelURL = URL + "model.json";
+        const metadataURL = URL + "metadata.json";
+
+        // load the model and metadata
+        // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+        // or files from your local hard drive
+        // Note: the pose library adds "tmImage" object to your window (window.tmImage)
+        model = await tmImage.load(modelURL, metadataURL);
+        maxPredictions = model.getTotalClasses();
+
+        
+        labelContainer = document.getElementById("label-container");
+        for (let i = 0; i < maxPredictions; i++) { // and class labels
+            labelContainer.appendChild(document.createElement("div"));
+        }
+        predict();
+    }
+
+    // run the webcam image through the image model
+    async function predict() {
+        var image = document.getElementById("imagePreview");
+        // predict can take in an image, video or canvas html element
+        const prediction = await model.predict(image, false);
+        for (let i = 0; i < maxPredictions; i++) {
+            const classPrediction =
+                prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+            labelContainer.childNodes[i].innerHTML = classPrediction;
+        }
+    }
+</script>
 
   
 
