--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ h1 small {
 
 <body translate="no" >
   <div class="container">
-    <h1>jQuery Image Upload 
+    <h1>호빵이랑 팬케이크 구분하기
         <small>with preview</small>
     </h1>
     <div class="avatar-upload">
